# consumer-product-recalls

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TODO.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  deep-rescan-cpsc.yml  deep-rescan-fda.yml  deep-rescan-nhtsa.yml  deep-rescan-usda.yml  extract-cpsc.yml  extract-fda.yml  extract-nhtsa.yml  extract-usda-establishments.yml  extract-usda.yml  refresh-user-agents.yml
bruno/cpsc/: opencollection.yml
bruno/fda/: opencollection.yml
bruno/usda/: opencollection.yml
config/sources/: cpsc.yaml  fda.yaml  nhtsa.yaml  usda.yaml  usda_establishment.yaml
data/: user_agents.json
dbt/: dbt_project.yml  profiles.yml
dbt/tests/: assert_cpsc_row_count_sane.sql  assert_fda_row_count_sane.sql  assert_no_orphan_products.sql  assert_usda_row_count_sane.sql
documentation/: architecture.md  architecture_overview.md  cli.md  commands.md  data_schemas.md  de-project-decision-guide.md  development.md  issues.md  operations.md  silver_design_notes.md
documentation/cpsc/: first_extraction_findings.md  last_publish_date_semantics.md
documentation/decisions/: 0001-sources-in-scope.md  0002-unit-of-analysis-header-line-firm.md  0003-event-type-discriminator.md  0004-four-layer-medallion-pipeline.md  0005-storage-tier-neon-and-r2.md  0006-usda-bilingual-record-deduplication.md  0011-transformation-framework-dbt-core.md  (+21 more)
migrations/: _columns.py  env.py
project_scope/: current_branch_staged_tasks.md  data_source_notes.md  implementation_plan.md  project_vision_and_constraints.md  questions.md
prompts/: adr_analysis_refactor.md  initial_prompt_20260416.md
scripts/: check_infra.py  check_pydantic_strict.py  promote_error_to_cassette.py  refresh_user_agents.py  verify_cassette_scrub.py
tests/: conftest.py
(+184 files in other folders)
